$Id: NEWS,v 1.88 2001-03-17 20:34:31 flood Exp $

1.2.2 - CVS
---------------------------------
- Bug #1066 - new GNU glob() and friends, which properly limits recursion and
  avoids DoS issues.  Built-in glob support is now always compiled in to
  proftpd regardless of libc support on build platform.
- New directive "MasqueradeAddress", used to emit a "fake" (non-interface) IP
  in server ident, magic cookies and PASV commands.  Useful for firewalled or
  NAT'd networks that are not FTP aware.
- Bug 1044 - New directive "AccessDenyMsg", works just like AccessAllowMsg,
  but does the obvious.
- Bug 1055 - Not really a bug, but still .. ftpwho/ftpcount now attempt to
  scan proftpd.conf looking for ScoreboardPath, if all else fails
- Bug 1042 - <Directory /> arbitrarily not matching.

1.2.1 - Released 03/01/2001
---------------------------------
- A relatively major issue was discovered with session.groups which may cause
  any group-expressions inside of <Limit> (DenyGroup, etc) to malfunction.
  This is the primary reason for the 1.2.1 release.
- Default CFLAGS changed from "-g3 -O6" to "-O2" because it is reported
  that -O6 is highly experimental, and including debugging really isn't all
  the useful, as someone _really_ interested in debugging can edit Make.rules.
- Defining classes without an explicit "Classes On" now generates a log
  warning.
- New mod_sql and mod_ldap from their respective maintainers.

1.2.0-final - Released 02/26/2001
---------------------------------
- Numerous additional bug fixes from Bugzilla.  See http://bugs.proftpd.org
  for more info.
- New and updated README.* and INSTALL.
- initgroups() support has been removed, it will be re-added in 1.3 after we
  have proper modular support in authentication modules.
- mod_sql.c, mod_sql_mysql.c and mod_sql_postgres.c back in, with a new
  maintainer (replacements for mod_sqlpw and friends).
- instead of using kill(pid,SIGCONT) to determine if scoreboard pids are